# StepperMotorDriver

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Application/: CMakeLists.txt  main.cpp
CMake/: additional-functions.cmake  arm-none-eabi-gcc.cmake  firmware.cmake  testing.cmake  toolchain-windows-clang.cmake
NucleoF446RE/: .cproject  .project  CMakeLists.txt  NucleoF446RE.ioc
NucleoF446RE/Application/: Application.cpp  Application.h  Initialisation.cpp  Initialisation.h
NucleoF446RE/Application/Drivers/: GpioDriver.cpp  GpioDriver.h  InterruptTimer.cpp  InterruptTimer.h  InterruptTimer10Khz.cpp  InterruptTimer10Khz.h  InterruptTimer1Khz.cpp  InterruptTimer1Khz.h  InterruptTimerCommon.cpp  UartDriver.cpp  UartDriver.h
NucleoF446RE/Core/Inc/: main.h
NucleoF446RE/Core/Src/: gpio.c  main.c  stm32f4xx_it.c  tim.c
NucleoF446RE/Core/Startup/: startup_stm32f446retx.s
Source/Command/: CMakeLists.txt  CommandData.cpp  CommandData.h  CommandInterpreter.cpp  CommandInterpreter.h  CommandRegistry.cpp  CommandRegistry.h  ICommandData.h  ICommandHandler.h  ICommandInterpreter.h  ICommandRegistry.h
Source/Command/Types/: CommandKeys.h  ComponentName.cpp  ComponentName.h
Source/IDrivers/: CMakeLists.txt  GpioPin.h  IButtonPressCallback.h  IDualChannelMotorDriver.h  IExternalInterruptReceiver.h  IGpioDriver.h  IInterruptTimer.h  IInterruptTimer10Khz.h  IInterruptTimer1Khz.h  ITimerInterruptReceiver.h  IUartDriver.h
Source/Motor/: CMakeLists.txt  FullStepSequence.h  IStepper.h  IStepperDriver.h  L298n.cpp  L298n.h  SpeedRamping.cpp  SpeedRamping.h  Stepper.cpp  Stepper.h  StepperDriver.cpp  StepperDriver.h  StepperMove.cpp  StepperMove.h  StepperRun.cpp  StepperRun.h  StepperUtility.cpp  StepperUtility.h  UserControl.cpp  UserControl.h
Source/Terminal/: CMakeLists.txt  ITerminalIn.h  ITerminalOut.h  ITerminalReceiveCharacterCallback.h  TerminalIn.cpp  TerminalIn.h  TerminalOut.cpp  TerminalOut.h
Source/Tests/: CMakeLists.txt
Source/Tests/Command/: CMakeLists.txt  CommandInterpreterTestObject.h  CommandTestUtilities.h  tests.CommandInterpreter.Component.cpp  tests.CommandInterpreter.Parameters.cpp  tests.CommandInterpreter.cpp  tests.CommandRegistry.cpp
Source/Tests/Mocks/: CMakeLists.txt  MockCalls.h  mock.ButtonPressCallback.h  mock.CommandRegistry.h  mock.GpioDriver.h  mock.InterruptTimer.h  mock.InterruptTimer1Khz.h
Source/Tests/Mocks/Command/: mock.CommandData.h  mock.CommandHandler.h  mock.CommandInterpreter.h
Source/Tests/Mocks/Drivers/: mock.DualChannelMotorDriver.h  mock.InterruptTimer10Khz.h  mock.UartDriver.h
Source/Tests/Mocks/Motor/: mock.Stepper.h  mock.StepperDriver.h
Source/Tests/Mocks/Terminal/: mock.Terminal.h  mock.TerminalOut.h
Source/Tests/Mocks/UserInput/: mock.UserButton.h
Source/Tests/Motor/: CMakeLists.txt  tests.L298n.cpp  tests.Stepper.Ramping.cpp  tests.Stepper.cpp  tests.StepperDriver.cpp  tests.UserControl.cpp
Source/Tests/Terminal/: CMakeLists.txt  tests.TerminalIn.cpp  tests.TerminalOut.cpp
Source/Tests/UserButton/: CMakeLists.txt  tests.UserButton.cpp
Source/UserButton/: CMakeLists.txt  IUserButton.h  UserButton.cpp  UserButton.h
Source/Utility/: CMakeLists.txt  DataQueue.cpp  DataQueue.h
